--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-todos-2",
+  "name": "cs3249-assignment4",
   "private": true,
   "scripts": {
     "start": "meteor run",
@@ -8,11 +8,22 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.9.2",
+    "@babel/runtime": "^7.8.3",
+    "csvtojson": "^2.0.10",
+    "dygraphs": "^2.1.0",
+    "fusioncharts": "^3.15.1-sr.1",
     "jquery": "^3.4.1",
+    "jscharting": "^2.9.0-8",
     "meteor-node-stubs": "^1.0.0",
+    "moment": "^2.24.0",
+    "papaparse": "^5.2.0",
+    "pondjs": "^0.9.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-canvas-js": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-fusioncharts": "^3.1.2",
+    "react-timeseries-charts": "^0.16.1",
+    "simpl-schema": "^1.5.9"
   },
   "meteor": {
     "mainModule": {
