--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pondjs": "^0.9.0",
     "react": "^16.13.1",
     "react-canvas-js": "^1.0.1",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
     "react-fusioncharts": "^3.1.2",
     "react-timeseries-charts": "^0.16.1",
